Benchmark Fory JSON Kotlin 1.7.1 with immutable models (#1)
The benchmark now exercises Fory JSON Kotlin 1.7.1 with immutable Kotlin
constructor models and a retained Kotlin type token. All four libraries
use equivalent null/default output, retained
serializers/adapters/readers, and UTF-8 byte or stream/buffer APIs.
Setup verifies fixture reads, all String/byte round trips, and JSON-tree
equality before timing; regression checks protect immutable construction
and Kotlin defaults/nullability.

This PR includes a complete 16-method JMH run on an Apple M5 with
OpenJDK 25.0.3, the raw JSON and process output, environment and fixture
hashes, refreshed figures, and the report. The measured source is
`cbd1b2a4d018d7686a9f5662ef1ed2b3d76e9823`. Fory's throughput ranges
from 3.63× to 12.12× the compared libraries in this run. The model, byte
paths, and machine differ from the previous report, so these are not a
controlled version-to-version comparison.

Validation:
- `./gradlew test jmhClasses` passed all 3 correctness tests.
- Dependency inspection confirmed Fory Kotlin/JSON/core all resolve to
1.7.1.
- `./gradlew jmh --console=plain` completed all 16 methods and 80
measurement samples.
- Verified raw-result completeness, environment checksums, report
arithmetic, and generated figures.
- Markdown lint and `git diff --check` passed.